--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         const clientId = 'a06feae73e1e44a39ade90ab01408397';
         // IMPORTANT: Replace 'YOUR_LOCAL_IP_ADDRESS' with your computer's actual local IP (e.g., 192.168.1.100)
         // This MUST match the Redirect URI configured in your Spotify Developer Dashboard exactly!
-        const redirectUri = 'http://127.0.0.1:8080/spotify_app.html';
+        const redirectUri = 'https://www.chestersbusy.ca';
         const scopes = [
             'user-read-private',
             'user-read-email',
